# rs-blocks

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  publish.sh
benches/: file_read.rs
rs-blocks-derive/: Cargo.toml  README.md
rs-blocks-derive/src/: lib.rs
src/: args.rs  config.rs  ema.rs  file.rs  lib.rs  main.rs  utils.rs
src/blocks/: battery.rs  block.rs  brightness.rs  cpu.rs  memory.rs  mod.rs  network.rs  time.rs  volume.rs
