[package]
name = "rs-blocks"
version = "0.1.0"
authors = ["Lewis Belcher <belcher_lewis@protonmail.com>"]
edition = "2018"
description = "Simple i3blocks replacement."
license = "MIT"
keywords = ["i3blocks", "monitor"]
categories = ["command-line-utilities", "filesystem"]
homepage = "https://gitlab.com/lewisbelcher/rs-blocks"
readme = "README.md"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.4"
lazy_static = "1.3"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "file_read"
harness = false

[[bin]]
name = "rs-blocks"
path = "src/main.rs"
